# circuit-to-tensor

./: Cargo.toml  README.md
benchmarks/: README.md
benchmarks/applications/: compilation.ipynb
benchmarks/applications/basis_change_p4_o3/: basis_change_p4_o3.cliffords.qasm  basis_change_p4_o3.cnotphase.qasm  basis_change_p4_o3.hopt.qasm  basis_change_p4_o3.initial.cliffords.qasm  basis_change_p4_o3.mapping.txt  basis_change_p4_o3.matrix.npy  basis_change_p4_o3.qasm  basis_change_p4_o3.tensor.npy
benchmarks/applications/basis_change_p4_o4/: basis_change_p4_o4.cliffords.qasm  basis_change_p4_o4.cnotphase.qasm  basis_change_p4_o4.hopt.qasm  basis_change_p4_o4.initial.cliffords.qasm  basis_change_p4_o4.mapping.txt  basis_change_p4_o4.matrix.npy  basis_change_p4_o4.qasm  basis_change_p4_o4.tensor.npy
benchmarks/applications/basis_change_p4_o5/: basis_change_p4_o5.cliffords.qasm  basis_change_p4_o5.cnotphase.qasm  basis_change_p4_o5.hopt.qasm  basis_change_p4_o5.initial.cliffords.qasm  basis_change_p4_o5.mapping.txt  (+3 more)
examples/: README.ipynb
examples/outputs/: mod_5_4.block0.cliffords.qasm  mod_5_4.block1.cnotphase.qasm  mod_5_4.block1.matrix.npy  mod_5_4.block1.matrix.opt.npy  mod_5_4.block1.matrix.opt.qasm  mod_5_4.block1.tensor.npy  mod_5_4.block2.cliffords.qasm  mod_5_4.final.qasm  mod_5_4.hopt.qasm  mod_5_4.hopt.verify.txt  mod_5_4.optimized.qasm  mod_5_4.partition.verify.txt  mod_5_4.resynth.verify.txt
src/: circuit.rs  compile.rs  decompose.rs  extract.rs  hadamard.rs  main.rs  resynth.rs  verify.rs
src/tests/: decompose.rs  extract.rs  hadamard.rs  mod.rs
(+616 files in other folders)
